src/objects/Activity_tracking__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Number__c</fullName>
        <formula>CASE(RecordType.Name,&apos;One To One&apos;,&apos;OT-&apos;+ Name ,
&apos;Events&apos;,&apos;EV-&apos; + Name,
&apos;Mailing&apos;,&apos;MA-&apos; + Name,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campagna__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activity tracking</relationshipLabel>
        <relationshipName>Activity_tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Canale__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Activity_Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Activity category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Activity_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Name_templ__c</fullName>
        <formula>IF(NOT(ISNULL(Customer_Name__r.FirstName)),Customer_Name__r.FirstName+&apos; &apos;+Customer_Name__r.LastName,Customer_Name__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activity tracking</relationshipLabel>
        <relationshipName>Activity_tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <formula>TEXT(Gift__r.Tipologia_Attivit_picklist__c )</formula>
        <label>Gift Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift</label>
        <referenceTo>Attivita_Marketing__c</referenceTo>
        <relationshipLabel>Activity tracking</relationshipLabel>
        <relationshipName>Activity_tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image_Attachm__c</fullName>
        <formula>HYPERLINK(
	IF(Image_Reference__c != &apos;&apos;, SUBSTITUTE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=$$$$$$$$$$$$$&amp;operationContext=CHATTER&amp;contentId=05T0D000002Lt6Y&apos;, &apos;$$$$$$$$$$$$$&apos;, Image_Reference__c ),&apos;&apos;), 
	IF(Image_Reference__c != &apos;&apos;, SUBSTITUTE(IMAGE(&apos;/sfc/servlet.shepherd/version/download/$$$$$$$$$$$$$&apos;, &apos;attachment image&apos;,150,150), &apos;$$$$$$$$$$$$$&apos;, Image_Reference__c ),&apos;&apos;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Reference__c</fullName>
        <label>Image Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Instore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Boutique</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Activity tracking</relationshipLabel>
        <relationshipName>Activity_tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Out_of_store__c</fullName>
        <label>Where (out of store)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Instore</fullName>
                </value>
                <value>
                    <fullName>Out of store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note_Contatto__c</fullName>
        <label>Activity notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Campaign_Member__c</fullName>
        <label>Status Campaign Member</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inviato</fullName>
                </value>
                <value>
                    <fullName>Risposta</fullName>
                </value>
                <value>
                    <fullName>Invitation sent</fullName>
                </value>
                <value>
                    <fullName>Presence confirmed</fullName>
                </value>
                <value>
                    <fullName>Presence declined</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Suggested Target</fullName>
                </value>
                <value>
                    <fullName>Customer attended</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Target confirmed</fullName>
                </value>
                <value>
                    <fullName>Customer did not attend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_final_costs__c</fullName>
        <label>Sum of final costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Boutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Boutique</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Activity tracking (Allocated Boutique)</relationshipLabel>
        <relationshipName>Activity_tracking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Client_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Client Advisor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Associated__c.IsActive__c</field>
                <operation>equals</operation>
                <value>A</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Associated__c</referenceTo>
        <relationshipLabel>Activity tracking</relationshipLabel>
        <relationshipName>Activity_tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Activity tracking</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Campagna__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Canale__c</columns>
        <columns>Categoria__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>266517</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Activity Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity tracking</pluralLabel>
    <recordTypes>
        <fullName>Brunello_s_Contact</fullName>
        <active>true</active>
        <label>Brunello&apos;s Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mailing</fullName>
        <active>true</active>
        <label>Mailing</label>
    </recordTypes>
    <recordTypes>
        <fullName>One_To_One</fullName>
        <active>true</active>
        <label>One2One</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Location_alternative</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!ISBLANK(Location_Instore__c), !ISBLANK( Location_Out_of_store__c ))</errorConditionFormula>
        <errorMessage>Le location in/out of store sono alternative tra loro. Selezionarne solo una.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Location_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( RecordType.DeveloperName &lt;&gt; &apos;Mailing&apos;,

OR(
AND(ISPICKVAL( Location__c, &apos;Instore&apos;), ISBLANK(Location_Instore__c)),

AND(ISPICKVAL( Location__c, &apos;Out of store&apos;),
ISBLANK( Location_Out_of_store__c))))</errorConditionFormula>
        <errorMessage>Selezionare la location corretta.</errorMessage>
    </validationRules>
</CustomObject>